# globalog

./: README.md  pyproject.toml
src/globalog/: __init__.py  config.py  exceptions.py  logger.py
tests/: sanity.py
