# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "globalog"
version = "0.1.0"
description = "A global logger with automatic configuration loading"
readme = "README.md"
authors = [{name = "Your Name"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>= 6.0.2",
]

[project.urls]
Homepage = "https://github.com/ronpik/globalog"
